--- a/dragonstack/frontend/src/index.css
+++ b/dragonstack/frontend/src/index.css
@@ -3,8 +3,7 @@ body{
     margin: 10%;
 font-size: 20px;
     background: linear-gradient(45deg, #C1B19A, white) ;
-    font-family: 'Tajawal', sans-serif;
-
+    font-family: "Comic Sans MS", serif;
 }
 .dragon-avatar-image-wrapper{
     display: flex;
