--- a/dragonstack/frontend/src/index.css
+++ b/dragonstack/frontend/src/index.css
@@ -19,3 +19,9 @@ font-size: 20px;
 .dragon-avatar-image{
     z-index: 0;
 }
+
+.logout-button{
+    position: absolute;
+    right: 30px;
+    top: 30px;
+}
