--- a/dragonstack/frontend/src/index.css
+++ b/dragonstack/frontend/src/index.css
@@ -25,3 +25,8 @@ font-size: 20px;
     right: 30px;
     top: 30px;
 }
+.account-dragon-row-input{
+    width: 100px;
+    height: 20px;
+    margin-right: 15px;
+}
